Fix warnings and formats